   * The "tracks have been hidden in the playlist" warning when filtering the playlist is
     now displayed inside the playlist. (BR 260352)
   * Update tag widget for Layout edit, filter edit, organize collection and guess tag
     dialog.
   * When fadeout and/or Replay Gain isn't possible, gray-out related UI elements in order
     not to fool users.

  BUGFIXES:
   * Fix `amarok --play file.mp3` option didn't actually start playback.
   * Fix frequent crashes on Linux when starting to play a track. (BR 319371)
   * Reason why a particular track is not playable is now shown in playlist tooltip; patch
     by Anmol Ahuja. (BR 313649)
   * Pre-apmlifier in equalizer is now only enabled if it is actually supported; patch by
     Harsh Gupta. (BR 301311)
   * Fix compilation error on systems with gcc-4.2 (BR 314528)
   * Fix inability to create database when home directory contains non-ASCII characters.
     (BR 313914)
   * Fix Amarok crashed while doing "Organize Files" (BR 317980)
   * Fix Crash on very long artist names [@ Meta::SqlArtist::SqlArtist]. (BR 276894)
   * Clarify message when Last.fm streams are not available. (BR 315771)
   * Don't remove common labels when editing the tags of multiple tracks. (BR 316043)
   * Fix vertical positioning of On-Screen-Display. (BR 269788)
   * Prevent inability to save Last.fm password in corner cases. (BR 315306)
   * Fix crash when quitting Amarok with Statistics Synchronization open. (BR 315525)
   * Fix items moving around when expanded in collection browser. (BR 305602)
   * Fix typo in Nepomuk query which did not let track numbers show up in Amarok.
     (BR 311847)
   * Fix bumpy fade-out when first used. (BR 312062)
   * Fix subtle bugs when a long fade-out is initiated near the song end.
   * Don't try to fade-out with phonon backends that don't support it. (vlc)

VERSION 2.7
  CHANGES:
    * Files page has been made more intuitive by making Places the root view